# veil

./: .gitignore  .vercelignore  Cargo.toml  README.md  vercel.json
app/: .env.example  .env.production.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
circuits/: CIRCUITS.md
circuits/lib/: README.md  bits.ts  field.ts  format.ts  inputs.ts  merkle.ts  signals.ts  validate.ts
cli/coinutils/: Cargo.toml
cli/notetool/: Cargo.toml
cli/notetool/src/: main.rs
cli/veil-cli/: Cargo.toml
contract/: Cargo.toml
contract/src/: bits.rs  checks.rs  encoding.rs  events.rs  lib.rs  merkle_util.rs  poolmath.rs  root_history.rs
deployments/: testnet.json
docs/: SUBMISSION.md
examples/: README.md  package.json  tsconfig.json
examples/src/: deposit-flow.ts  globals.d.ts  health.ts  list-pools.ts  pool-stats.ts  withdraw-flow.ts
keeper/: package.json
keeper/src/: alerts.ts  chain.ts  config.ts  globals.d.ts  index.ts  log.ts  metrics.ts  scheduler.ts  tasks.ts
libs/veil-encoding/: Cargo.toml
libs/veil-utils/: Cargo.toml
monitor/: package.json
monitor/src/: config.ts  dashboard.ts  globals.d.ts  history.ts  index.ts  probes.ts  scoring.ts  server.ts
scripts/: deploy-pools.sh  dev.sh  e2e-multi.sh  e2e.sh  validate-relayer.sh
sdk/: package.json  tsconfig.json
sdk/src/: amount.ts  client.ts  config.ts  errors.ts  field.ts  format.ts  hex.ts  http.ts  index.ts  indexerClient.ts  notes.ts  pools.ts  relayerClient.ts  strkey.ts  types.ts
(+90 files in other folders)
