[package]
name = "notetool"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "stellar-notetool"
path = "src/main.rs"

[dependencies]
coinutils = { path = "../coinutils" }
# testutils gives us Env::default() + budget control for offline field arithmetic,
# and (via feature unification) keeps coinutils compiling standalone.
soroban-sdk = { workspace = true, features = ["testutils"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
